--- a/index.html
+++ b/index.html
@@ -43,25 +43,23 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
     <div class="scanlines"></div>
     
-    <!-- 重要：移除 importmap，改用相對路徑引入入口文件 -->
+    <!-- 使用相對路徑引入，由 Vite 在打包時處理所有模組解析 -->
     <script type="module" src="./index.tsx"></script>
     
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // 使用相對路徑註冊 Service Worker
           navigator.serviceWorker.register('./sw.js').then(reg => {
             console.log('SW registered');
           }).catch(err => {
@@ -70,6 +68,5 @@
         });
       }
     </script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
