--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="My Pomodoro">
     
-    <!-- 更改為你的圖片路徑 -->
+    <!-- 確保 icon.png 存在於根目錄 -->
     <link rel="apple-touch-icon" href="./icon.png">
     
     <meta name="theme-color" content="#020202">
@@ -64,8 +64,9 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js', { scope: './' }).then(reg => {
-            console.log('SW registered');
+          // 在 GitHub Pages 環境下，使用相對路徑註冊 SW 且不強制設定 scope 通常最為穩健
+          navigator.serviceWorker.register('./sw.js').then(reg => {
+            console.log('SW registered on:', reg.scope);
           }).catch(err => {
             console.log('SW failed', err);
           });
