--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="My Pomodoro">
     
-    <!-- 使用絕對路徑確保在根網域下正確加載 -->
+    <!-- 這裡的路徑在部署後會變成 pomodoro.bartchen.com/icon.png -->
     <link rel="apple-touch-icon" href="/icon.png">
     
     <meta name="theme-color" content="#020202">
@@ -62,13 +62,13 @@
     <div class="scanlines"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
+      // 確保 Service Worker 註冊指向根目錄
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // 使用根目錄路徑註冊，確保 Scope 覆蓋整個自定義網域
           navigator.serviceWorker.register('/sw.js').then(reg => {
-            console.log('SW registered on:', reg.scope);
+            console.log('SW Registered with scope:', reg.scope);
           }).catch(err => {
-            console.log('SW failed', err);
+            console.error('SW Registration failed:', err);
           });
         });
       }
