--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="My Pomodoro">
     
-    <!-- 這裡的路徑在部署後會變成 pomodoro.bartchen.com/icon.png -->
     <link rel="apple-touch-icon" href="/icon.png">
     
     <meta name="theme-color" content="#020202">
@@ -62,10 +61,10 @@
     <div class="scanlines"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
-      // 確保 Service Worker 註冊指向根目錄
+      // 使用相對路徑 ./sw.js 確保在自定義網域下能正確匹配 Origin
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js').then(reg => {
+          navigator.serviceWorker.register('./sw.js').then(reg => {
             console.log('SW Registered with scope:', reg.scope);
           }).catch(err => {
             console.error('SW Registration failed:', err);
